Helm/app-helloworld-route.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: internal-gateway
spec:
  selector:
    istio: aks-istio-ingressgateway-internal
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "kobidemo.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-vs-internal
spec:
  hosts:
  - "kobidemo.com"
  gateways:
  - internal-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: aks-helloworld-one
        port:
          number: 9080
